react-redux manage related

--- a/src/views/NewsSandBox/index.css
+++ b/src/views/NewsSandBox/index.css
@@ -4,3 +4,9 @@ body,
 .ant-layout {
     height: 100%;
 }
+
+.ant-spin-nested-loading,
+.ant-spin-container {
+    width: 100%;
+    height: 100%;
+}
